<resources>
    <string name="app_name">Sushi Art</string>
    <string name="sushi_art">Sushi Art</string>
    <string name="bt_przejd_do_menu">Przejdź do menu</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="sushi_art_txt">Sushi Art</string>
    <string name="todo">TODO</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="food_fragment">Food Fragment</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="about_fragment">Dowiedz się więcej</string>
    <string name="item_strona_glowna">Strona główna</string>
    <string name="item_o_nas">O nas</string>
    <string name="item_menu">Menu</string>
    <string name="item_galeria">Galeria</string>
    <string name="item_kontakt">Kontakt</string>
    <string name="button_home">Przejdź do menu</string>
    <string name="about_fragment2">o naszej restauracji</string>
    <string name="str_menu">M e n u</string>
    <string name="contact_txt">Kontakt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="img">img</string>
</resources>