<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/item_strona_glowna" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/item_o_nas"/>

        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/nav_food"
            android:title="@string/item_menu"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/nav_gallery"
            android:title="@string/item_galeria"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/nav_contact"
            android:title="@string/item_kontakt"/>
    </group>
</menu>